--- a/pages/About Us/assets/css/style.css
+++ b/pages/About Us/assets/css/style.css
@@ -65,7 +65,7 @@
 }
 
 body {
-    background: url("/pages/About Us/assets/img/V1.jpg") center center / cover;
+    background: url("/AWD-Xplora-Fuecoco-TEST/pages/About Us/assets/img/V1.jpg") center center / cover;
     min-height: 100vh;
     overflow-x: hidden;
     color: white;
@@ -342,9 +342,9 @@ aside h2 {
     background-position: center;
 }
 
-.social-icons .facebook { background-image: url('/pages/About Us/assets/img/V2.png'); } 
-.social-icons .instagram { background-image: url('/pages/About Us/assets/img/V3.webp'); }
-.social-icons .other { background-image: url('/pages/About Us/assets/img/V4.webp'); }
+.social-icons .facebook { background-image: url('../img/V2.png'); } 
+.social-icons .instagram { background-image: url('../img/V3.webp'); }
+.social-icons .other { background-image: url('../img/V4.webp'); }
 
 .learn-more {
     text-decoration: none;
